[gd_scene load_steps=2 format=3 uid="uid://bc086pu7kmx5k"]

[ext_resource type="Script" uid="uid://ce4k51rm15n6v" path="res://addons/game_manager/game_manager.gd" id="1_pp25o"]

[node name="GameManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pp25o")

[node name="ButtonGroup" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -33.0
offset_right = 78.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CharacterManagerButton" type="Button" parent="ButtonGroup"]
layout_mode = 2
text = "Character Manager"

[node name="AttackManagerButton" type="Button" parent="ButtonGroup"]
layout_mode = 2
text = "Attack Manager"

[node name="QuitButton" type="Button" parent="ButtonGroup"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ButtonGroup/CharacterManagerButton" to="." method="_on_character_manager_pressed"]
[connection signal="pressed" from="ButtonGroup/AttackManagerButton" to="." method="_on_attack_manager_button_pressed"]
[connection signal="pressed" from="ButtonGroup/QuitButton" to="." method="_on_quit_button_pressed"]
